# Multiagents

./: .gitignore  README.md  pyproject.toml
arc42/: 01_introduction.md  05_building_blocks.md  09_architecture_decisions.md  _section_map.yaml
personas/: _template.md  analyst.md  coder.md  firmware_engineer.md  ghost.md  software_architect.md
src/multiagents/: cli.py  config.py
src/multiagents/agent/: base.py  context.py  identity.py  memory.py  provider.py  react_persona.py  safety.py
src/multiagents/agents/: analyst.py  coder.py  ghost.py
src/multiagents/graphs/: lab_meeting.py  triage.py  unit_review.py
src/multiagents/observability/: tracing.py
src/multiagents/schemas/: outputs.py
src/multiagents/state/: graph_state.py
src/multiagents/tools/: jira_tool.py  obsidian_loader.py
tests/: conftest.py  test_agents.py  test_base_agent.py  test_cli.py  test_context.py  test_graphs.py  test_identity.py  test_memory.py  test_observability.py  test_provider.py  test_safety.py  test_tools.py
