[project]
name = "multiagents"
version = "0.1.0"
description = "Multi-agent system for bio-measurement instrument development"
readme = "README.md"
authors = [
    { name = "ikmx", email = "29687861+yuzuponikemi@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3,<0.4",
    "langchain-ollama>=0.3,<0.4",
    "langgraph>=0.4,<0.5",
    "langgraph-checkpoint>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0",
    "arize-phoenix>=8.0",
    "arize-phoenix-otel>=0.8",
    "openinference-instrumentation-langchain>=0.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
multiagents = "multiagents.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
